--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "weather-app",
+  "homepage": "https://faizal0013.github.io/Weather-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +8,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
